OSP Boolean.valueOf, not new Boolean